<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/button_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="446dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/button_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button

                    android:id="@+id/button01"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="25pt"
                    android:layout_height="match_parent"

                    android:backgroundTintMode="add"
                    android:text="@string/dag01" />

                <Button
                    android:id="@+id/button02"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="25pt"
                    android:layout_height="wrap_content"
                    android:text="@string/dag02" />

                <Button
                    android:id="@+id/button03"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="25pt"
                    android:layout_height="wrap_content"
                    android:text="@string/dag03" />

                <Button
                    android:id="@+id/button04"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="25pt"
                    android:layout_height="wrap_content"
                    android:text="@string/dag04" />

                <Button
                    android:id="@+id/button05"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="25pt"
                    android:layout_height="wrap_content"
                    android:text="@string/dag05" />
            </LinearLayout>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button06"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="25pt"
                    android:layout_height="wrap_content"
                    android:text="@string/dag06" />

                <Button
                    android:id="@+id/button07"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="25pt"
                    android:layout_height="wrap_content"
                    android:text="@string/dag07" />

                <Button
                    android:id="@+id/button08"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="25pt"
                    android:layout_height="wrap_content"
                    android:text="@string/dag08" />

                <Button
                    android:id="@+id/button09"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="25pt"
                    android:layout_height="wrap_content"
                    android:text="@string/dag09" />

                <Button
                    android:id="@+id/button10"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="25pt"
                    android:layout_height="wrap_content"
                    android:text="@string/dag10" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button11"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="25pt"
                    android:layout_height="wrap_content"
                    android:text="@string/dag11" />

                <Button
                    android:id="@+id/button12"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="25pt"
                    android:layout_height="wrap_content"
                    android:text="@string/dag12" />

                <Button
                    android:id="@+id/button13"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="25pt"
                    android:layout_height="wrap_content"
                    android:text="@string/dag13" />

                <Button
                    android:id="@+id/button14"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="25pt"
                    android:layout_height="wrap_content"
                    android:text="@string/dag14" />

                <Button
                    android:id="@+id/button15"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="25pt"
                    android:layout_height="wrap_content"
                    android:text="@string/dag15" />

            </LinearLayout>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button16"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="25pt"
                    android:layout_height="wrap_content"
                    android:text="@string/dag16" />

                <Button
                    android:id="@+id/button17"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="25pt"
                    android:layout_height="wrap_content"
                    android:text="@string/dag17" />

                <Button
                    android:id="@+id/button18"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="25pt"
                    android:layout_height="wrap_content"
                    android:text="@string/dag18" />

                <Button
                    android:id="@+id/button19"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="25pt"
                    android:layout_height="wrap_content"
                    android:text="@string/dag19" />

                <Button
                    android:id="@+id/button20"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="25pt"
                    android:layout_height="wrap_content"
                    android:text="@string/dag20" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button21"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="25pt"
                    android:layout_height="wrap_content"
                    android:text="@string/dag21" />

                <Button
                    android:id="@+id/button22"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="25pt"
                    android:layout_height="wrap_content"
                    android:text="@string/dag22" />

                <Button
                    android:id="@+id/button23"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="25pt"
                    android:layout_height="wrap_content"
                    android:text="@string/dag23" />

                <Button
                    android:id="@+id/button24"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="25pt"
                    android:layout_height="wrap_content"
                    android:text="@string/dag24" />

                <Button
                    android:id="@+id/button25"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="25pt"
                    android:layout_height="wrap_content"
                    android:text="@string/dag25" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button26"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="25pt"
                    android:layout_height="wrap_content"
                    android:text="@string/dag26" />

                <Button
                    android:id="@+id/button27"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="25pt"
                    android:layout_height="wrap_content"
                    android:text="@string/dag27" />

                <Button
                    android:id="@+id/button28"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="25pt"
                    android:layout_height="wrap_content"
                    android:text="@string/dag28" />

                <Button
                    android:id="@+id/button29"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="25pt"
                    android:layout_height="wrap_content"
                    android:text="@string/dag29" />

                <Button
                    android:id="@+id/button30"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="25pt"
                    android:layout_height="wrap_content"
                    android:text="@string/dag30" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button31"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="25pt"
                    android:layout_height="wrap_content"
                    android:text="@string/dag31" />
            </LinearLayout>

        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="175dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/monthLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="Month" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="2"
                android:text="@string/totaal" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totaalAantal" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/gewerkt" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/gewerktAantal" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>